# levenshtein-automata

./: .gitignore  Cargo.toml  README.md
src/: alphabet.rs  bench.rs  dfa.rs  index.rs  levenshtein_nfa.rs  lib.rs  parametric_dfa.rs  tests.rs
