[package]
name = "levenshtein_automata"
version = "0.2.1"
authors = ["Paul Masurel <paul.masurel@gmail.com>"]
edition = "2018"
license = "MIT"
categories = ["text-processing"]
description = """Creates Levenshtein Automata in an efficient manner."""
documentation = "https://docs.rs/levenshtein-automata/"
homepage = "https://github.com/quickwit-inc/levenshtein-automata"
repository = "https://github.com/quickwit-inc/levenshtein-automata"
readme = "README.md"
keywords = ["levenshtein", "automaton", "automata", "fuzzy"]

[dependencies]
fst = {version="0.4", optional=true, default-features=false}

[dev-dependencies]
levenshtein = "1.0"

[features]
fst_automaton = ["fst"]
